--- a/MeteoApp/MeteoApp/MeteoApp.csproj
+++ b/MeteoApp/MeteoApp/MeteoApp.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Radzen.Blazor" Version="5.7.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
