Added server-client functionality

--- a/MeteoApp/MeteoServerProject/MeteoServerProject.csproj
+++ b/MeteoApp/MeteoServerProject/MeteoServerProject.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Radzen.Blazor" Version="5.7.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\MeteoServerProject\MeteoServerProject.csproj" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
 </Project>
